--- a/automl.ipynb
+++ b/automl.ipynb
@@ -2,18 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Automated ML\n",
     "\n",
     "TODO: Import Dependencies. In the cell below, import all the dependencies that you will need to complete the project."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598423888013
@@ -27,33 +25,58 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "import os\n",
+    "import csv\n",
+    "\n",
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn import datasets\n",
+    "import pkg_resources\n",
+    "\n",
+    "import azureml.core\n",
+    "from azureml.core.experiment import Experiment\n",
+    "from azureml.core.workspace import Workspace\n",
+    "from azureml.train.automl import AutoMLConfig\n",
+    "from azureml.core.dataset import Dataset\n",
+    "\n",
+    "from azureml.pipeline.steps import AutoMLStep\n",
+    "\n",
+    "# Check core SDK version number\n",
+    "print(\"SDK version:\", azureml.core.VERSION)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Dataset\n",
     "\n",
     "### Overview\n",
-    "TODO: In this markdown cell, give an overview of the dataset you are using. Also mention the task you will be performing.\n",
-    "\n",
+    "The Titanic dataset used in this project was downloaded from [Kaggle](https://www.kaggle.com/competitions/titanic/overview). We are provided a train and a test dataset with 891 and 418 records, respectively, with 12 columns.\n",
+    "From the given features for each record we want to make a prediction if this person did survive the Titanic disaster or not. Therefore relevant features should be identified to help us with this task.\n",
     "\n",
     "TODO: Get data. In the cell below, write code to access the data you will be using in this project. Remember that the dataset needs to be external."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "ws = Workspace.from_config()\n",
-    "\n",
-    "# choose a name for experiment\n",
-    "experiment_name = 'your experiment name here'\n",
-    "\n",
-    "experiment=Experiment(ws, experiment_name)"
-   ],
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "# Load workspace from config file present at .\\config.json.\n",
+    "ws = Workspace.from_config()\n",
+    "print(ws.name, ws.resource_group, ws.location, ws.subscription_id, sep = '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "gather": {
      "logged": 1598423890461
@@ -67,28 +90,57 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# Choose a name for experiment\n",
+    "experiment_name = 'Titanic'\n",
+    "\n",
+    "experiment=Experiment(ws, experiment_name)\n",
+    "experiment"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## AutoML Configuration\n",
     "\n",
-    "TODO: Explain why you chose the automl settings and cofiguration you used below."
-   ],
-   "metadata": {}
+    "TODO: Explain why you chose the automl settings and cofiguration you used below.\n",
+    "\n",
+    "First, we create a compute cluster if it is not yet available. As we want to use deep learning, we choose a GPU for training."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "# TODO: Put your automl settings here\n",
-    "automl_settings = {}\n",
-    "\n",
-    "# TODO: Put your automl config here\n",
-    "automl_config = AutoMLConfig()"
-   ],
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "from azureml.core.compute import AmlCompute\n",
+    "from azureml.core.compute import ComputeTarget\n",
+    "from azureml.core.compute_target import ComputeTargetException\n",
+    "\n",
+    "# NOTE: update the cluster name to match the existing cluster\n",
+    "# Choose a name for your CPU cluster\n",
+    "amlcompute_cluster_name = \"ComputeClusterCapstone\"\n",
+    "\n",
+    "# Verify that cluster does not exist already\n",
+    "try:\n",
+    "    compute_target = ComputeTarget(workspace=ws, name=amlcompute_cluster_name)\n",
+    "    print('Found existing cluster, use it.')\n",
+    "except ComputeTargetException:\n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_NC6',\n",
+    "                                                           vm_priority = 'lowpriority',\n",
+    "                                                           max_nodes=4)\n",
+    "    compute_target = ComputeTarget.create(ws, amlcompute_cluster_name, compute_config)\n",
+    "\n",
+    "compute_target.wait_for_completion(show_output=True, min_node_count = 1, timeout_in_minutes = 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "gather": {
      "logged": 1598429217746
@@ -102,16 +154,19 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# TODO: Put your automl settings here\n",
+    "automl_settings = {}\n",
+    "\n",
+    "# TODO: Put your automl config here\n",
+    "automl_config = AutoMLConfig()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "# TODO: Submit your experiment\n",
-    "remote_run = experiment.submit(automl_config)"
-   ],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598431107951
@@ -125,24 +180,27 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# TODO: Submit your experiment\n",
+    "remote_run = experiment.submit(automl_config)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Run Details\n",
     "\n",
     "OPTIONAL: Write about the different models trained and their performance. Why do you think some models did better than others?\n",
     "\n",
     "TODO: In the cell below, use the `RunDetails` widget to show the different experiments."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598431121770
@@ -156,23 +214,23 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Best Model\n",
     "\n",
     "TODO: In the cell below, get the best model from the automl experiments and display all the properties of the model.\n",
     "\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598431425670
@@ -186,15 +244,13 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "#TODO: Save the best model"
-   ],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598431426111
@@ -208,24 +264,26 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "#TODO: Save the best model"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Model Deployment\n",
     "\n",
     "Remember you have to deploy only one of the two models you trained but you still need to register both the models. Perform the steps in the rest of this notebook only if you wish to deploy this model.\n",
     "\n",
     "TODO: In the cell below, register the model, create an inference config and deploy the model as a web service."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598431435189
@@ -239,13 +297,12 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "TODO: In the cell below, send a request to the web service you deployed to test it."
-   ],
    "metadata": {
     "collapsed": true,
     "gather": {
@@ -260,13 +317,14 @@
       "deleting": false
      }
     }
-   }
+   },
+   "source": [
+    "TODO: In the cell below, send a request to the web service you deployed to test it."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598432707604
@@ -280,13 +338,12 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "TODO: In the cell below, print the logs of the web service and delete the service"
-   ],
    "metadata": {
     "collapsed": true,
     "gather": {
@@ -301,13 +358,14 @@
       "deleting": false
      }
     }
-   }
+   },
+   "source": [
+    "TODO: In the cell below, print the logs of the web service and delete the service"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "jupyter": {
      "outputs_hidden": false,
@@ -318,10 +376,13 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Submission Checklist**\n",
     "- I have registered the model.\n",
@@ -330,13 +391,12 @@
     "- I have deleted the webservice and shutdown all the computes that I have used.\n",
     "- I have taken a screenshot showing the model endpoint as active.\n",
     "- The project includes a file containing the environment details.\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {}
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -344,7 +404,7 @@
    "name": "python3-azureml"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -358,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.10.4"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
