--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -2,43 +2,73 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Hyperparameter Tuning using HyperDrive\n",
     "\n",
     "TODO: Import Dependencies. In the cell below, import all the dependencies that you will need to complete the project."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598531914256
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "import os\n",
+    "import csv\n",
+    "\n",
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn import datasets\n",
+    "import pkg_resources\n",
+    "\n",
+    "import helper\n",
+    "import azureml.core\n",
+    "from azureml.data.datapath import DataPath\n",
+    "from azureml.core.experiment import Experiment\n",
+    "from azureml.core.workspace import Workspace\n",
+    "from azureml.train.automl import AutoMLConfig\n",
+    "from azureml.core.dataset import Dataset\n",
+    "from azureml.core.run import Run\n",
+    "from azureml.core.model import Model\n",
+    "\n",
+    "\n",
+    "from azureml.pipeline.steps import AutoMLStep\n",
+    "\n",
+    "# Check core SDK version number\n",
+    "print(\"SDK version:\", azureml.core.VERSION)"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Dataset\n",
     "\n",
     "TODO: Get data. In the cell below, write code to access the data you will be using in this project. Remember that the dataset needs to be external."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "ws = Workspace.from_config()\n",
-    "experiment_name = 'your experiment name here'\n",
-    "\n",
-    "experiment=Experiment(ws, experiment_name)"
-   ],
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "# Load workspace from config file present at .\\config.json.\n",
+    "ws = Workspace.from_config()\n",
+    "print(ws.name, ws.resource_group, ws.location, ws.subscription_id, sep = '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "gather": {
      "logged": 1598531917374
@@ -52,15 +82,54 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# Choose a name for experiment\n",
+    "experiment_name = 'Titanic_hyperdrive'\n",
+    "project_folder = './titanic-project-hyperdrive'\n",
+    "\n",
+    "experiment=Experiment(ws, experiment_name)\n",
+    "experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try to load the dataset from the Workspace. Otherwise, create it from the file\n",
+    "found = False\n",
+    "key = \"Titanic_dataset\"\n",
+    "\n",
+    "if key in ws.datasets.keys(): \n",
+    "        found = True\n",
+    "        dataset = ws.datasets[key] \n",
+    "\n",
+    "if not found:\n",
+    "        # Create AML Dataset and register it into Workspace\n",
+    "        datastore = ws.get_default_datastore()\n",
+    "        datastore.upload(src_dir='data', target_path='data')\n",
+    "        train_data = datastore.path('data/train_modified.csv')\n",
+    "        \n",
+    "        dataset = Dataset.Tabular.from_delimited_files(train_data, separator=';')        \n",
+    "        dataset = dataset.register(workspace=ws,\n",
+    "                                   name=key,\n",
+    "                                   description=\"This is the complete dataset for the capstone project.\")\n",
+    "        \n",
+    "        dataset_filtered = dataset.keep_columns([\"Survived\",\"Pclass\",\"Sex\",\"SibSp\",\"Parch\",\"Fare\",\"Embarked\",\"Age\"])\n",
+    "        dataset_filtered = dataset_filtered.register(workspace=ws,\n",
+    "                                   name=key+\"_filtered\",\n",
+    "                                   description=\"This is the filtered dataset for the capstone project \" \\\n",
+    "                                   \"with only those features relevant for training.\")\n",
+    "\n",
+    "df = dataset_filtered.to_pandas_dataframe()\n",
+    "df.describe()"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Hyperdrive Configuration\n",
-    "\n",
-    "TODO: Explain the model you are using and the reason for chosing the different hyperparameters, termination policy and config settings."
-   ],
    "metadata": {
     "collapsed": true,
     "gather": {
@@ -75,24 +144,43 @@
       "deleting": false
      }
     }
-   }
+   },
+   "source": [
+    "## Hyperdrive Configuration\n",
+    "\n",
+    "TODO: Explain the model you are using and the reason for chosing the different hyperparameters, termination policy and config settings."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "# TODO: Create an early termination policy. This is not required if you are using Bayesian sampling.\n",
-    "early_termination_policy = <your policy here>\n",
-    "\n",
-    "#TODO: Create the different params that you will be using during training\n",
-    "param_sampling = <your params here>\n",
-    "\n",
-    "#TODO: Create your estimator and hyperdrive config\n",
-    "estimator = <your estimator here>\n",
-    "\n",
-    "hyperdrive_run_config = <your config here>"
-   ],
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "from azureml.core.compute import AmlCompute\n",
+    "from azureml.core.compute import ComputeTarget\n",
+    "from azureml.core.compute_target import ComputeTargetException\n",
+    "\n",
+    "num_nodes = 5\n",
+    "\n",
+    "amlcompute_cluster_name = \"ComputeClusterCapstone\"\n",
+    "\n",
+    "# Verify that cluster does not exist already\n",
+    "try:\n",
+    "    compute_target = ComputeTarget(workspace=ws, name=amlcompute_cluster_name)\n",
+    "    print('Found existing cluster, use it.')\n",
+    "except ComputeTargetException:\n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_NC6',\n",
+    "                                                           vm_priority = 'lowpriority',\n",
+    "                                                           max_nodes=num_nodes)\n",
+    "    compute_target = ComputeTarget.create(ws, amlcompute_cluster_name, compute_config)\n",
+    "\n",
+    "compute_target.wait_for_completion(show_output=True, min_node_count = 1, timeout_in_minutes = 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "gather": {
      "logged": 1598544893076
@@ -106,15 +194,24 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# TODO: Create an early termination policy. This is not required if you are using Bayesian sampling.\n",
+    "early_termination_policy = <your policy here>\n",
+    "\n",
+    "#TODO: Create the different params that you will be using during training\n",
+    "param_sampling = <your params here>\n",
+    "\n",
+    "#TODO: Create your estimator and hyperdrive config\n",
+    "estimator = <your estimator here>\n",
+    "\n",
+    "hyperdrive_run_config = <your config here>"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "#TODO: Submit your experiment"
-   ],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598544897941
@@ -128,17 +225,14 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "#TODO: Submit your experiment"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Run Details\n",
-    "\n",
-    "OPTIONAL: Write about the different models trained and their performance. Why do you think some models did better than others?\n",
-    "\n",
-    "TODO: In the cell below, use the `RunDetails` widget to show the different experiments."
-   ],
    "metadata": {
     "collapsed": true,
     "gather": {
@@ -153,13 +247,18 @@
       "deleting": false
      }
     }
-   }
+   },
+   "source": [
+    "## Run Details\n",
+    "\n",
+    "OPTIONAL: Write about the different models trained and their performance. Why do you think some models did better than others?\n",
+    "\n",
+    "TODO: In the cell below, use the `RunDetails` widget to show the different experiments."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598546648408
@@ -173,22 +272,22 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Best Model\n",
     "\n",
     "TODO: In the cell below, get the best model from the hyperdrive experiments and display all the properties of the model."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598546650307
@@ -202,15 +301,13 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "#TODO: Save the best model"
-   ],
-   "outputs": [],
    "metadata": {
     "gather": {
      "logged": 1598546657829
@@ -224,17 +321,14 @@
       "deleting": false
      }
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "#TODO: Save the best model"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Model Deployment\n",
-    "\n",
-    "Remember you have to deploy only one of the two models you trained but you still need to register both the models. Perform the steps in the rest of this notebook only if you wish to deploy this model.\n",
-    "\n",
-    "TODO: In the cell below, register the model, create an inference config and deploy the model as a web service."
-   ],
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -246,45 +340,53 @@
       "deleting": false
      }
     }
-   }
+   },
+   "source": [
+    "## Model Deployment\n",
+    "\n",
+    "Remember you have to deploy only one of the two models you trained but you still need to register both the models. Perform the steps in the rest of this notebook only if you wish to deploy this model.\n",
+    "\n",
+    "TODO: In the cell below, register the model, create an inference config and deploy the model as a web service."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO: In the cell below, send a request to the web service you deployed to test it."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "TODO: In the cell below, print the logs of the web service and delete the service"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Submission Checklist**\n",
     "- I have registered the model.\n",
@@ -294,13 +396,12 @@
     "- I have taken a screenshot showing the model endpoint as active.\n",
     "- The project includes a file containing the environment details.\n",
     "\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {}
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -322,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
