--- a/automl.ipynb
+++ b/automl.ipynb
@@ -623,7 +623,8 @@
      "transient": {
       "deleting": false
      }
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -651,6 +652,13 @@
    "source": [
     "from azureml.widgets import RunDetails\n",
     "RunDetails(remote_run).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image](https://user-images.githubusercontent.com/98894580/172327316-a2cc1ff5-2dcc-4ea0-a09b-f576ead9d40b.png)"
    ]
   },
   {
@@ -771,6 +779,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![image](https://user-images.githubusercontent.com/98894580/172329525-6ebe4f47-6b89-4347-a470-ce7a7feea469.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Prediction\n",
     "Predict values for `Survived` for the Kaggle competition."
    ]
@@ -784,9 +799,7 @@
     "Remember you have to deploy only one of the two models you trained but you still need to register both the models. Perform the steps in the rest of this notebook only if you wish to deploy this model.\n",
     "\n",
     "[Source1](https://docs.microsoft.com/de-de/python/api/overview/azure/ml/?view=azure-ml-py)\n",
-    "[Source 2](https://github.com/Azure/MachineLearningNotebooks/blob/master/how-to-use-azureml/deployment/deploy-to-cloud/model-register-and-deploy.ipynb)\n",
-    "\n",
-    "TODO: In the cell below, create an inference config and deploy the model as a web service."
+    "[Source 2](https://github.com/Azure/MachineLearningNotebooks/blob/master/how-to-use-azureml/deployment/deploy-to-cloud/model-register-and-deploy.ipynb)"
    ]
   },
   {
@@ -1832,7 +1845,7 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1846,7 +1859,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.4"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
