--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -435,6 +435,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Hyperparameter selection**\n",
+    "\n",
+    "Parameters selected for optimization are ```learning_rate``` and ```max_depth```, they should be selected via choice from a provided list. learning_rate as a generally important hyperparameter for all ML experiments should be varied to optimally reach the globally best metric and to avoid the pitfalls of getting stuck in local error minima at a too low as well as to overshoot at a too high learning rate. max_depth was selected due to its high importance in reaching good differentiation specifically for the gradient regression method. The maximum depth limits the number of nodes in the tree and should therefor be tuned for best performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
@@ -582,6 +591,13 @@
    "source": [
     "from azureml.widgets import RunDetails\n",
     "RunDetails(remote_run).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image](https://user-images.githubusercontent.com/98894580/172343095-f8783ac4-4c10-4415-851b-e6538665ce1a.png)"
    ]
   },
   {
@@ -744,7 +760,7 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -758,7 +774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.4"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
