--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -747,11 +747,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 48,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Registering model Titanic_Hyperdrive_model\n"
+     ]
+    }
+   ],
    "source": [
-    "best_run.register_model(model_name = best_model, model_path = './outputs/')"
+    "best_run.register_model(model_name = \"Titanic_Hyperdrive_model\", model_path = './outputs/')"
    ]
   }
  ],
@@ -760,7 +770,7 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -774,7 +784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.5"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
